# EddieCLibrary

./: CMakeLists.txt  README.MD
include/: ecl.h  ranges.h
src/: ecl_ranges.c  ranges.c
